fixed up areas and spacing

--- a/src/shared/components/layout/ContentPage.scss
+++ b/src/shared/components/layout/ContentPage.scss
@@ -3,3 +3,7 @@
   background-color: #fff;
   margin-bottom: 20px;
 }
+
+.oc-content-page-lg-font {
+  font-size: 15px;
+}
