--- a/src/shared/styles/Variables.scss
+++ b/src/shared/styles/Variables.scss
@@ -43,7 +43,7 @@ $link-hover-color:      darken($link-color, 15%);
 //== Typography
 
 $font-family:           "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-size-base:        15px;
+$font-size-base:        13px;
 
 //== Layout
 
